b=526797 move expose event origin when possible to workaround Flash bug r=roc